--- a/index.html
+++ b/index.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css">
         <title>imagens mikilita 2D</title>
     </head>
     <body>
-        <div class="Principal">
-            <div class="div-imagem">
+        <div class="batata">
+            <span>
+              </span>
+            <div class="imagem">
                  <img class="imagem" src="1.jpg" alt="">
                 <h1 class="titulo">1</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem" >
                  <img class="imagem" src="2.jpg" alt="">
                 <h1 class="titulo">2</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                  <img class="imagem" src="3.jpg" alt="">
                 <h1 class="titulo">3</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                  <img class="imagem" src="4.jpg" alt="">
                  <h1 class="titulo">4</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                  <img class="imagem" src="5.jpg" alt="">
                   <h1 class="titulo">5</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                 <img class="imagem" src="6.jpg" alt="">
                  <h1 class="titulo">6</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                  <img class="imagem" src="7.jpg" alt="">
                  <h1 class="titulo">7</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                 <img class="imagem" src="8.jpg" alt="">
                  <h1 class="titulo">8</h1>
             </div>
+            <span>
+            </span>
             <div class="div-imagem">
                  <img class="imagem" src="9.jpg" alt="">
                  <h1 class="titulo">9</h1>
             </div>
+            <span>
+            </span>
         </div>
 
     </body>
